[gd_scene load_steps=8 format=3 uid="uid://bojpgvlm623qa"]

[ext_resource type="Texture2D" uid="uid://c8787mfg6cymr" path="res://ui/combat_panel/name_panel/number_panel.png" id="1_1otkq"]
[ext_resource type="Script" path="res://ui/combat_panel/name_panel/name_panel.gd" id="2_axwhg"]
[ext_resource type="Texture2D" uid="uid://305svbe1l3to" path="res://items/weapons/axes/steel_axe/icon.png" id="2_xeovt"]
[ext_resource type="PackedScene" uid="uid://dvo0wyjym5xwk" path="res://ui/arrow.tscn" id="3_tmfw0"]

[sub_resource type="Shader" id="Shader_1kuw5"]
code = "shader_type canvas_item;

#include \"res://shaders/gba_color.gdshaderinc\"
#include \"res://shaders/palette.gdshaderinc\"

void fragment() {
	COLOR = convert(COLOR, COLOR);
	COLOR.rgb = gba_color(COLOR.rgb);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n6efh"]
shader = SubResource("Shader_1kuw5")
shader_parameter/darken_screen = 0.5
shader_parameter/old_colors = null
shader_parameter/new_colors = null

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ni8gi"]
texture = ExtResource("1_1otkq")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="NamePanel" type="PanelContainer"]
material = SubResource("ShaderMaterial_n6efh")
offset_right = 81.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ni8gi")
script = ExtResource("2_axwhg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="UnitName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Irashkalla"

[node name="Item" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftArrow" type="Control" parent="VBoxContainer/Item"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="LeftArrow" parent="VBoxContainer/Item/LeftArrow" instance=ExtResource("3_tmfw0")]
unique_name_in_owner = true
visible = false

[node name="ItemIcon" type="TextureRect" parent="VBoxContainer/Item"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_xeovt")

[node name="ItemNameLabel" type="Label" parent="VBoxContainer/Item"]
unique_name_in_owner = true
layout_mode = 2
text = "Eclipse"

[node name="RightArrow" type="Control" parent="VBoxContainer/Item"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="RightArrow" parent="VBoxContainer/Item/RightArrow" instance=ExtResource("3_tmfw0")]
unique_name_in_owner = true
visible = false
flip_h = true
